[package]
name = "galene-gamepad"
version = "0.1.0"
authors = ["erdnaxe"]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9"
evdev = "0.12"
log = "0.4"
serde_json = "1"
tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
url = "2"
uuid = { version = "1.2", features = ["v4", "serde"] }
